Bug 1831342 - Add pref to control whether the reorder queue is used with GMP plugins. r=media-playback-reviewers,padenot

This patch adds a pref to disable use of the reorder queue with the GMP
video decoder. Disabling it will allow improved compatibility with the
older OpenH264 plugins. This is useful mostly for Linux distros which
rebuild Firefox and enable the GMP video decoder on their own.

Differential Revision: https://phabricator.services.mozilla.com/D178254